--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "cross-env": "^7.0.2",
     "markdown-to-jsx": "^6.11.4",
     "ms": "^2.1.2",
-    "next": "9.5.2",
+    "next": "^10.0.5",
     "next-auth": "^3.0.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
